--- a/style.css
+++ b/style.css
@@ -3,12 +3,17 @@
 
 body{
     background-color: hsl(212, 45%, 89%);
+    min-height: 100vh;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
 .box{
     display: flex;
     flex-direction: column;
-    margin: 20px auto;
 	height: auto;
     border-radius: 10px;
     gap: 10px;
